--- a/package.json
+++ b/package.json
@@ -6,22 +6,40 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "sass-watch": "sass --no-source-map --watch ./assets/scss/elem-page.scss ./assets/css/elem-page.css",
+    "nodemon-watch": "nodemon index.js -e html,js,css,scss",
+    "dev2": "npm-run-all --parallel sass-watch nodemon-watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@forestadmin/agent": "^1.0.0-beta.41",
+    "@forestadmin/datasource-mongoose": "^1.0.0-beta.13",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^3.0.0",
+    "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
+    "mongoose-admin-panel-backend": "^1.0.1",
+    "mysql2": "^2.3.3",
     "node": "^18.4.0",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "reload": "^3.2.0",
+    "sass": "^1.53.0",
+    "sequelize": "^6.21.2",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5"
   }
 }
