--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass-watch-3": "sass --no-source-map --watch ./assets/scss/auth.scss ./assets/css/auth.css",
     "sass-watch-4": "sass --no-source-map --watch ./assets/scss/base.scss ./assets/css/base.css",
     "nodemon-watch": "nodemon index.js -e html,js,css,scss",
+    "nodemon-watch-server": "nodemon index_server.js -e html,js,css,scss",
     "dev2": "npm-run-all --parallel sass-watch-1 sass-watch-2 sass-watch-3 sass-watch-4 nodemon-watch"
   },
   "keywords": [],
