--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   web:
     build:
@@ -12,3 +12,12 @@ services:
     environment:
       NODE_ENV: development
       DEBUG: nodejs-docker-express:*
+    depends_on:
+      - mongodb
+    links:
+      - mongodb
+  mongodb:
+    image: mongo:3.5
+    ports:
+      - "27017:27017"
+    command: mongod --port 27018 --bind_ip_all
