--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,13 +12,23 @@ services:
     environment:
       NODE_ENV: development
       DEBUG: nodejs-docker-express:*
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
     depends_on:
-      - mongodb
-    links:
-      - mongodb
+      - mongo-express
 
-  mongodb:
-    image: mongo:3.5
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express:
+    image: mongo-express
+    restart: always
     ports:
-      - "27017:27017"
-    command: mongod --port 27017 --bind_ip_all
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
